welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:23: error: value update is not a member of java.awt.Color
  	if (getCouleurSol()=Color) {
            ^SlugSnail:23: error: object java.awt.Color is not a value
  	if (getCouleurSol()=Color) {
                            ^